27 August 2004:  Menelaos Karavelas
- fixed bug in hierarchy about calling the wrong version of insert_third

20 August 2004:  Menelaos Karavelas
- fixed bugs in copy constructor/assignment operator for the segment
  Voronoi diagram and segment Voronoi diagram hierarchy classes
- using std::list instead of std::set for the input sites container
- using replaced Triple by boost tuple in Site_rep_2

18 August 2004:  Menelaos Karavelas
- updated TODO list
- the input site container now contains handles instead of points: this
  reduces memory usage
- the input site container and point container are now sets instead of lists.
  I may have to change this and use lists again. The reason for this change
  is that sets automatically check whether the inserted item has already been
  inserted; with lists one has to do that explicitly and it is very
  inefficient.
- made the code a bit more memory efficient: storage sites are created at
  the top-most level and are passed throughout the various methods

17 august 2004:  Menelaos Karavelas
- changed the API for the storage site classes; changed the classes that
  were using them accordingly
- updated the specs to reflect the API changes of the last few days.

14 August 2004:  Menelaos Karavelas
- fixed bugs in the demo files that were introduced by the changes of
  August 13

13 August 2004:  Menelaos Karavelas
***************************************************************
*** Day of the opening ceremony of the Athens Olympic Games ***
***************************************************************
- fixed errors in the doc: Segment_Voronoi_diagram_2 class: some typedefs
  where not really typedefs and some other ones where not written correctly
- Segment_Voronoi_diagram_2 class: fixed some typedefs (changes related to
  the changes above)
- replaced Are_same_points_2 predicate by Equal_2 according to the spec
- added the type Arrangement_type; this type was in the spec but was
  not defined